example/secondfile/objects/DHStatus_Logical_Provisioning__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning</description>
    <fields>
        <fullName>Access_Method__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-Access Method Data-Access Method</description>
        <label>Access Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Status__c</fullName>
        <label>Activation Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommoncustomerIdentifier__c</fullName>
        <label>Common Customer Identifier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-Customer ID</description>
        <label>Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatusUpdateDealHashDetailsID__c</fullName>
        <formula>DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <label>DHStatusUpdateDealHashDetailsID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatusUpdateDealHashPremiseNumber__c</fullName>
        <formula>DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.Premise_Number__c</formula>
        <label>DHStatusUpdateDealHashPremiseNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_IDH_Data_Type__c</fullName>
        <formula>DHStatus_Update_IDH__r.Data_Type__c</formula>
        <label>DHStatus IDH Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus - Update Deal Hash Details</label>
        <referenceTo>DHStatus_Update_Deal_Hash_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Logical Provisionings</relationshipLabel>
        <relationshipName>DHStatus_Logical_Provisionings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus – Update IDH</label>
        <referenceTo>DHStatus_Update_IDH__c</referenceTo>
        <relationshipLabel>DHStatus-Logical Provisionings</relationshipLabel>
        <relationshipName>DHStatus_Logical_Provisionings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Erros__c</fullName>
        <label>Erros</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <formula>DHStatus_Update_Deal_Hash_Details__r.GRID_Premise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRID Premise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstarCustomerID__c</fullName>
        <label>Instar Customer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnect_Technology__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-Access Method Data-Interconnect Technology</description>
        <label>Interconnect Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedTimeStamp__c</fullName>
        <label>Last Modified Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ManagesCPEType__c</fullName>
        <label>Manages CPE Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-Order Number</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvisionID__c</fullName>
        <label>Provision ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-Status</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Logical Provisioning</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LP-{00000}</displayFormat>
        <label>DHStatus-Logical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Logical Provisionings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>